--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me at <a href="">your.email@example.com</a>.</p>
+        <p>You can reach me at <a href=""></a>.</p>
     </section>
 
     <footer>
