--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-        </div>
+            <p>no current projects</p>
         <!-- Add more project sections as needed -->
     </section>
 
